--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -11,8 +11,8 @@
     <link href="../../shared/css/home-layout.css" rel="stylesheet">
     <link href="../../checklist/css/checklist.css" rel="stylesheet">
     <link href="../css/contact.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../shared/css/breadcrumbs.css">
-    <link rel="icon" href="../../../favicon.png" type="image/png">
+    <link href="../../shared/css/breadcrumbs.css" rel="stylesheet">
+    <link href="../../../favicon.png" rel="icon" type="image/png">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -40,31 +40,31 @@
 
 <section class="thumbnail-container">
     <div class="contact-content color-palencar">
-        <img class="contact-img" src="../../assets/avatars/palencar_avatar.png" alt="Michal Palenčár">
+        <img alt="Michal Palenčár" class="contact-img" src="../../assets/avatars/palencar_avatar.png">
         <h1 class="contact-name">Michal Palenčár</h1>
         <table class="contact-table">
 
             <tbody>
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97896</td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xpalencarm@stuba.sk">xpalencarm@stuba.sk</a></td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/palencar.michal/">palencar.michal</a></td>
             </tr>
@@ -74,31 +74,31 @@
     </div>
 
     <div class="contact-content color-peluha">
-        <img class="contact-img" src="../../assets/avatars/peluha_avatar.png" alt="Matej Peluha">
+        <img alt="Matej Peluha" class="contact-img" src="../../assets/avatars/peluha_avatar.png">
         <h1 class="contact-name">Matej Peluha</h1>
         <table class="contact-table">
 
             <tbody>
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97899</td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xpeluha@stuba.sk">xpeluha@stuba.sk</a></td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/matej.peluha/">matej.peluha</a></td>
             </tr>
@@ -108,31 +108,31 @@
     </div>
 
     <div class="contact-content color-sremanak">
-        <img class="contact-img" src="../../assets/avatars/sremanak_avatar.png" alt="Ľuboš Sremaňák">
+        <img alt="Ľuboš Sremaňák" class="contact-img" src="../../assets/avatars/sremanak_avatar.png">
         <h1 class="contact-name">Ľuboš Sremaňák</h1>
         <table class="contact-table">
 
             <tbody>
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97936</td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xsremanak@stuba.sk">xsremanak@stuba.sk</a></td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/lubos.sremanak/">lubos.sremanak</a></td>
             </tr>
@@ -142,31 +142,31 @@
     </div>
 
     <div class="contact-content color-sokol">
-        <img class="contact-img" src="../../assets/avatars/sokol_avatar.png" alt="Kristián Sokol">
+        <img alt="Kristián Sokol" class="contact-img" src="../../assets/avatars/sokol_avatar.png">
         <h1 class="contact-name">Kristián Sokol</h1>
         <table class="contact-table">
 
             <tbody>
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97933</td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xsokolk@stuba.sk">xsokolk@stuba.sk</a></td>
             </tr>
 
             <tr>
                 <td>
-                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
-                                   speed="1" hover autoplay></lottie-player>
+                    <lottie-player autoplay class="icon-size"
+                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/kristian.sokol.5/">kristian.sokol.5</a></td>
             </tr>
