--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Pohľady Florencie</title>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
     <link href="../../app/shared/css/header.css" rel="stylesheet">
     <link href="../../app/shared/css/game-layout.css" rel="stylesheet">
@@ -36,8 +36,8 @@
                 <p class="modal-text">Gratulujeme! Poskladal(a) si obrázok za:</p>
                 <p class="modal-text" id="modal-time"></p>
                 <div class="col-md-4">
-                <button class="btn modal-button " onclick="removeModal()" type="submit">Zatvoriť
-                </button>
+                    <button class="btn modal-button " onclick="removeModal()" type="submit">Zatvoriť
+                    </button>
                 </div>
             </div>
         </div>
@@ -65,7 +65,8 @@
 
     <div class="game-container-canvas" id="game-canvas">
 
-        <img alt="Game picture" class="game-container-canvas-image" height="500" width="1000" src="../../app/assets/images/1000x500.png"/>
+        <img alt="Game picture" class="game-container-canvas-image" height="500" src="../../app/assets/images/1000x500.png"
+             width="1000"/>
 
 
         <div id="sky-drop">
@@ -74,31 +75,33 @@
         </div>
 
         <div id="bottom-left-drop">
-            <img alt="bottom-left" height="136" width="284" id="bottom-left" src="../../app/assets/images/palencar/02.png"/>
+            <img alt="bottom-left" height="136" id="bottom-left" src="../../app/assets/images/palencar/02.png"
+                 width="284"/>
         </div>
 
         <div id="mid-left-drop">
-            <img alt="mid-left" height="451" width="323" id="mid-left" src="../../app/assets/images/palencar/03.png"/>
+            <img alt="mid-left" height="451" id="mid-left" src="../../app/assets/images/palencar/03.png" width="323"/>
         </div>
 
         <div id="roof-drop">
-            <img alt="roof" height="147" width="415" id="roof" src="../../app/assets/images/palencar/04.png"/>
+            <img alt="roof" height="147" id="roof" src="../../app/assets/images/palencar/04.png" width="415"/>
         </div>
 
         <div id="under-roof-drop">
-            <img alt="under-roof" height="327" width="459" id="under-roof" src="../../app/assets/images/palencar/05.png"/>
+            <img alt="under-roof" height="327" id="under-roof" src="../../app/assets/images/palencar/05.png"
+                 width="459"/>
         </div>
 
         <div id="balcony-drop">
-            <img alt="balcony" height="94" width="343" id="balcony" src="../../app/assets/images/palencar/06.png"/>
+            <img alt="balcony" height="94" id="balcony" src="../../app/assets/images/palencar/06.png" width="343"/>
         </div>
 
         <div id="tower-drop">
-            <img alt="tower" height="500" width="165" id="tower" src="../../app/assets/images/palencar/07.png"/>
+            <img alt="tower" height="500" id="tower" src="../../app/assets/images/palencar/07.png" width="165"/>
         </div>
 
         <div id="dome-drop">
-            <img alt="dome" height="500" width="281" id="dome" src="../../app/assets/images/palencar/08.png"/>
+            <img alt="dome" height="500" id="dome" src="../../app/assets/images/palencar/08.png" width="281"/>
         </div>
     </div>
 </section>
