--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -14,7 +14,7 @@
 
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
     <link href="../../app/shared/css/print.css" rel="stylesheet">
-    <link rel="icon" href="../../favicon.png" type="image/png">
+    <link href="../../favicon.png" rel="icon" type="image/png">
     <script src="../../app/attendance-counter/js/attendance-cookies-handler.js"></script>
 
     <script src="../js/game.js"></script>
