--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -19,7 +19,7 @@
     <link href="../../app/shared/css/game-layout.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
-    <link rel="icon" href="../../favicon.png" type="image/png">
+    <link href="../../favicon.png" rel="icon" type="image/png">
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
     <script src="../js/jquery.ui.touch-punch.min.js"></script>
@@ -76,7 +76,8 @@
              src="../../app/assets/images/1000x500.png"
              width="1000"/>
         <div id="game-drop-left-background">
-            <img alt="Ľavé pozadie" height="500" id="game-image-left-background" src="../../app/assets/images/sokol/10.png"
+            <img alt="Ľavé pozadie" height="500" id="game-image-left-background"
+                 src="../../app/assets/images/sokol/10.png"
                  width="239"/>
         </div>
         <div id="game-drop-banana">
@@ -88,7 +89,8 @@
                  width="250"/>
         </div>
         <div id="game-drop-main-background">
-            <img alt="Hlavné pozadie" height="500" id="game-image-main-background" src="../../app/assets/images/sokol/11.png"
+            <img alt="Hlavné pozadie" height="500" id="game-image-main-background"
+                 src="../../app/assets/images/sokol/11.png"
                  width="569"/>
         </div>
         <div id="game-drop-blackberries">
@@ -115,7 +117,8 @@
                  width="249"/>
         </div>
         <div id="game-drop-right-background">
-            <img alt="Prave pozadie" height="500" id="game-image-right-background" src="../../app/assets/images/sokol/09.png"
+            <img alt="Prave pozadie" height="500" id="game-image-right-background"
+                 src="../../app/assets/images/sokol/09.png"
                  width="267"/>
         </div>
     </div>
