--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -10,7 +10,7 @@
     <link href="../../app/shared/css/game-layout.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
-    <link rel="icon" href="../../favicon.png" type="image/png">
+    <link href="../../favicon.png" rel="icon" type="image/png">
 
     <script src="../js/canvas/coordinates.js"></script>
     <script src="../js/puzzle/piece/imagePiece.js"></script>
