--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -10,8 +10,8 @@
     <link href="../../shared/css/header.css" rel="stylesheet">
     <link href="../../shared/css/home-layout.css" rel="stylesheet">
     <link href="../css/checklist.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../shared/css/breadcrumbs.css">
-    <link rel="icon" href="../../../favicon.png" type="image/png">
+    <link href="../../shared/css/breadcrumbs.css" rel="stylesheet">
+    <link href="../../../favicon.png" rel="icon" type="image/png">
 
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -61,9 +61,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
             </tr>
@@ -72,18 +72,18 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
             </tr>
             <tr>
                 <td>strihanie obrázkov</td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -92,9 +92,9 @@
             <tr>
                 <td>hlavička</td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td>
@@ -108,9 +108,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
             </tr>
             <tr>
@@ -119,9 +119,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
             </tr>
             <tr>
@@ -129,9 +129,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
             </tr>
@@ -140,9 +140,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
             </tr>
@@ -150,9 +150,9 @@
                 <td>počítadlo prístupov komponent</td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -161,9 +161,9 @@
                 <td>počítadlo prístupov dizajn</td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -171,9 +171,9 @@
             <tr>
                 <td>kontakt</td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -183,9 +183,9 @@
                 <td>meniny komponent</td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -195,9 +195,9 @@
                 <td>meniny dizajn</td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -209,17 +209,17 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
             </tr>
             <tr>
                 <td>checklist</td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
@@ -231,9 +231,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
             </tr>
 
@@ -244,9 +244,9 @@
                 </td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
             </tr>
@@ -255,9 +255,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
             </tr
@@ -265,9 +265,9 @@
             <tr>
                 <td>grafický návrh stránky</td>
                 <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
                 <td></td>
