--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -24,7 +24,7 @@
     <script src="../js/jquery-ui.min.js"></script>
     <script src="../js/jquery.ui.touch-punch.min.js"></script>
     <script src="../js/game.js"></script>
-
+    <link href="../../favicon.png" rel="icon" type="image/png">
 
 </head>
 <body>
@@ -65,7 +65,8 @@
 
     <div class="game-container-canvas" id="game-canvas">
 
-        <img alt="Game picture" class="game-container-canvas-image" height="500" src="../../app/assets/images/1000x500.png"
+        <img alt="Game picture" class="game-container-canvas-image" height="500"
+             src="../../app/assets/images/1000x500.png"
              width="1000"/>
 
 
