--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -48,7 +48,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97896</td>
             </tr>
@@ -56,7 +57,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xpalencarm@stuba.sk">xpalencarm@stuba.sk</a></td>
             </tr>
@@ -64,7 +66,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/palencar.michal/">palencar.michal</a></td>
             </tr>
@@ -82,7 +85,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97899</td>
             </tr>
@@ -90,7 +94,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xpeluha@stuba.sk">xpeluha@stuba.sk</a></td>
             </tr>
@@ -98,7 +103,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/matej.peluha/">matej.peluha</a></td>
             </tr>
@@ -116,7 +122,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97936</td>
             </tr>
@@ -124,7 +131,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xsremanak@stuba.sk">xsremanak@stuba.sk</a></td>
             </tr>
@@ -132,7 +140,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/lubos.sremanak/">lubos.sremanak</a></td>
             </tr>
@@ -150,7 +159,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"></lottie-player>
                 </td>
                 <td>97933</td>
             </tr>
@@ -158,7 +168,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"></lottie-player>
                 </td>
                 <td><a href="mailto:xsokolk@stuba.sk">xsokolk@stuba.sk</a></td>
             </tr>
@@ -166,7 +177,8 @@
             <tr>
                 <td>
                     <lottie-player autoplay class="icon-size"
-                                   hover speed="1" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
+                                   hover speed="1"
+                                   src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"></lottie-player>
                 </td>
                 <td><a href="https://www.facebook.com/kristian.sokol.5/">kristian.sokol.5</a></td>
             </tr>
