Pridané zdroje obrázka a kodov v hre Vitamín C

--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -317,8 +317,19 @@
                        href="https://stackoverflow.com/questions/990904/remove-accents-diacritics-in-a-string-in-javascript/37511463#37511463">
                     porovnanie stringov bez ohľadu na diakritiku</a></td>
             </tr>
-
-
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://www.google.com/search?q=ovocie+a+zelenina+vitam%C3%ADn+c&tbm=isch&ved=2ahUKEwiL-cj6sf7tAhXZ_4UKHZixCbkQ2-cCegQIABAA&oq=ovocie+a+zelenina+vitam%C3%ADn+c&gs_lcp=CgNpbWcQAzoCCAA6BAgAEBhQildY0WNgoGVoAHAAeACAAYYBiAGIB5IBAzkuMZgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=EQDxX8usO9n_lwSY46bICw&bih=722&biw=1519&hl=sk#imgrc=4rNj5fDj5BKUpM">
+                    obrázok (Vitamín C)</a></td>
+            </tr>
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://jqueryui.com/draggable/">draggable</a></td>
+            </tr>
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://api.jqueryui.com/droppable/">droppable</a></td>
+            </tr>
             </tbody>
         </table>
     </div>
