Upravená responzivita checklistu.

--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -47,17 +47,16 @@
             <thead>
             <tr>
                 <th class="color-tasks">Úlohy</th>
-                <th class="color-palencar">Michal Palenčár</th>
-                <th class="color-peluha">Matej Peluha</th>
-                <th class="color-sremanak">Ľuboš Sremaňák</th>
-                <th class="color-sokol">Kristián Sokol</th>
-
+                <th class="gamepad-background">Michal Palenčár</th>
+                <th class="bomb-background">Matej Peluha</th>
+                <th class="robot-background">Ľuboš Sremaňák</th>
+                <th class="cup-background">Kristián Sokol</th>
             </tr>
             </thead>
 
             <tbody class="scrollable-table">
             <tr>
-                <td>štruktúra projektu</td>
+                <td class="task lubos">štruktúra projektu</td>
                 <td></td>
                 <td></td>
                 <td>
@@ -68,7 +67,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>git organizácia</td>
+                <td class="task lubos">git organizácia</td>
                 <td></td>
                 <td></td>
                 <td>
@@ -79,7 +78,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>strihanie obrázkov</td>
+                <td class="task michal">strihanie obrázkov</td>
                 <td>
                     <lottie-player autoplay
                                    class="center-checkmark icon-size" speed="1"
@@ -90,7 +89,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>hlavička</td>
+                <td class="task michal">hlavička</td>
                 <td>
                     <lottie-player autoplay
                                    class="center-checkmark icon-size" speed="1"
@@ -103,7 +102,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>breadcrumbs komponent</td>
+                <td class="task kiko">breadcrumbs komponent</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -114,7 +113,7 @@
                 </td>
             </tr>
             <tr>
-                <td>breadcrumbs dizajn</td>
+                <td class="task kiko">breadcrumbs dizajn</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -125,7 +124,7 @@
                 </td>
             </tr>
             <tr>
-                <td>trojúrovňové menu komponent</td>
+                <td class="task lubos">trojúrovňové menu komponent</td>
                 <td></td>
                 <td></td>
                 <td>
@@ -136,7 +135,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>trojúrovňové menu dizajn</td>
+                <td class="task lubos">trojúrovňové menu dizajn</td>
                 <td></td>
                 <td></td>
                 <td>
@@ -147,7 +146,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>počítadlo prístupov komponent</td>
+                <td class="task matej">počítadlo prístupov komponent</td>
                 <td></td>
                 <td>
                     <lottie-player autoplay
@@ -158,7 +157,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>počítadlo prístupov dizajn</td>
+                <td class="task matej">počítadlo prístupov dizajn</td>
                 <td></td>
                 <td>
                     <lottie-player autoplay
@@ -169,7 +168,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>kontakt</td>
+                <td class="task michal">kontakt</td>
                 <td>
                     <lottie-player autoplay
                                    class="center-checkmark icon-size" speed="1"
@@ -180,19 +179,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>meniny komponent</td>
-                <td></td>
-                <td>
-                    <lottie-player autoplay
-                                   class="center-checkmark icon-size" speed="1"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
-                </td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td>meniny dizajn</td>
+                <td class="task matej">meniny komponent</td>
                 <td></td>
                 <td>
                     <lottie-player autoplay
@@ -204,7 +191,19 @@
             </tr>
 
             <tr>
-                <td>testovanie stránok</td>
+                <td class="task matej">meniny dizajn</td>
+                <td></td>
+                <td>
+                    <lottie-player autoplay
+                                   class="center-checkmark icon-size" speed="1"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
+                </td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td class="task kiko">testovanie stránok</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -215,7 +214,7 @@
                 </td>
             </tr>
             <tr>
-                <td>checklist</td>
+                <td class="task michal">checklist</td>
                 <td>
                     <lottie-player autoplay
                                    class="center-checkmark icon-size" speed="1"
@@ -226,7 +225,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>úprava na tlač</td>
+                <td class="task kiko">úprava na tlač</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -239,7 +238,7 @@
 
 
             <tr>
-                <td>animácie</td>
+                <td class="task lubos">animácie</td>
                 <td>
                 </td>
                 <td></td>
@@ -251,7 +250,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td>layout, dizajn stránky</td>
+                <td class="task lubos">layout, dizajn stránky</td>
                 <td></td>
                 <td></td>
                 <td>
@@ -260,10 +259,9 @@
                                    src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json"></lottie-player>
                 </td>
                 <td></td>
-            </tr
-            >
+            </tr>
             <tr>
-                <td>grafický návrh stránky</td>
+                <td class="task michal">grafický návrh stránky</td>
                 <td>
                     <lottie-player autoplay
                                    class="center-checkmark icon-size" speed="1"
@@ -280,7 +278,7 @@
     <div class="scrollable-table">
 
 
-        <table class="content-table">
+        <table class="content-table source-table">
             <thead>
             <tr>
                 <th class="color-tasks">Zdroje</th>
@@ -329,6 +327,10 @@
             <tr>
                 <td><a class="a-link-color"
                        href="https://api.jqueryui.com/droppable/">droppable</a></td>
+            </tr>
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://konvajs.org/docs/index.html">konvaJS</a></td>
             </tr>
             </tbody>
         </table>
