--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -39,7 +39,7 @@
 </div>
 
 <section class="thumbnail-container">
-    <div class="contact-content color-palencar">
+    <div class="contact-content gamepad-background">
         <img alt="Michal Palenčár" class="contact-img" src="../../assets/avatars/palencar_avatar.png">
         <h1 class="contact-name">Michal Palenčár</h1>
         <table class="contact-table">
@@ -76,7 +76,7 @@
         </table>
     </div>
 
-    <div class="contact-content color-peluha">
+    <div class="contact-content bomb-background">
         <img alt="Matej Peluha" class="contact-img" src="../../assets/avatars/peluha_avatar.png">
         <h1 class="contact-name">Matej Peluha</h1>
         <table class="contact-table">
@@ -113,7 +113,7 @@
         </table>
     </div>
 
-    <div class="contact-content color-sremanak">
+    <div class="contact-content robot-background">
         <img alt="Ľuboš Sremaňák" class="contact-img" src="../../assets/avatars/sremanak_avatar.png">
         <h1 class="contact-name">Ľuboš Sremaňák</h1>
         <table class="contact-table">
@@ -150,7 +150,7 @@
         </table>
     </div>
 
-    <div class="contact-content color-sokol">
+    <div class="contact-content cup-background">
         <img alt="Kristián Sokol" class="contact-img" src="../../assets/avatars/sokol_avatar.png">
         <h1 class="contact-name">Kristián Sokol</h1>
         <table class="contact-table">
