--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -11,7 +11,7 @@
     <link href="../css/game.css" rel="stylesheet">
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
     <link href="../../favicon.png" rel="icon" type="image/png">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="../js/canvas/coordinates.js"></script>
     <script src="../js/puzzle/piece/imagePiece.js"></script>
     <script src="../js/puzzle/piece/piece.js"></script>
@@ -37,6 +37,7 @@
 
     <script defer src="../../app/three-level-menu/js/three-level-menu.component.js"></script>
 
+
 </head>
 <body onload="onLoad()">
 <audio id="tick" preload="auto" src="../../app/assets/audio/sremanak/tick.mp3"></audio>
@@ -57,6 +58,10 @@
     </div>
 
     <div class="game-container-settings">
+
+        <button class="game-container-settings-button sounds-button material-icons" id="sounds" value=true onclick="sounds(this)">
+            volume_up
+        </button>
         <div class="dropdown game-container-settings-difficulty">
             <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle game-container-settings-button"
                     data-toggle="dropdown"
