--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -63,7 +63,7 @@
                 value=true>
             volume_up
         </button>
-        <div class="dropdown game-container-settings-difficulty">
+        <div class="dropdown game-container-settings-button game-container-settings-difficulty">
             <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle game-container-settings-button"
                     data-toggle="dropdown"
                     id="difficulty" type="button" value="difficulty">
